[APPBUG-5042] Errors in Mobile Web-Checkout Page.    fix checkout > "or free" cutoff in iphone 5
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@68624 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/mobileweb/mobileweb_common.css
+++ b/projects/Media/docroot/assets/css/mobileweb/mobileweb_common.css
@@ -1775,6 +1775,9 @@ li.cleanli .gen-arrow {
 			[data-ec-page] .mm-page #payment-method-separator hr {
 				width: 105px;
 			}
+			[data-ec-page] .mm-page .eTippingEnabled .cartsection__totalwrapper .subtotal__rowcell-left {
+				width: 160px;
+			}
 		}
 		
 		/* bottom find out more text */
